Fixed Sonarcube rel=noopener issue.

--- a/src/MannsBlog/Views/Root/About.cshtml
+++ b/src/MannsBlog/Views/Root/About.cshtml
@@ -59,42 +59,42 @@ SOFTWARE.
         <h4>@_localizer["connect"]</h4>
         <ul class="list-unstyled">
             <li><a href="mailto:Sascha.Manns@@outlook.de"><i class="fas fa-envelope"></i> Sascha.Manns@outlook.de</a></li>
-            <li><a href="http://keyserver.ubuntu.com/pks/lookup?search=83750b413dce232eb3340447b28b6b1b27102983&fingerprint=on&op=index" target="_blank"><i class="fas fa-lock"></i> 0x83750b413dce232eb3340447b28b6b1b27102983</a></li>
-            <li><a href="https://twitter.com/saigkill" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a></li>
-            <li><a href="https://www.facebook.com/sascha.manns" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
-            <li><a href="https://instagram.com/sascha.manns" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a href="https://www.linkedin.com/in/saigkill/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a href="https://www.amazon.de/-/e/B07J3CPKR1" target="_blank"><i class="fab fa-amazon"></i> @_localizer["amazon-page"]</a></li>
+            <li><a href="http://keyserver.ubuntu.com/pks/lookup?search=83750b413dce232eb3340447b28b6b1b27102983&fingerprint=on&op=index" target="_blank" rel="noopener"><i class="fas fa-lock"></i> 0x83750b413dce232eb3340447b28b6b1b27102983</a></li>
+            <li><a href="https://twitter.com/saigkill" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i> Twitter</a></li>
+            <li><a href="https://www.facebook.com/sascha.manns" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i> Facebook</a></li>
+            <li><a href="https://instagram.com/sascha.manns" target="_blank" rel="noopener"><i class="fab fa-instagram"></i> Instagram</a></li>
+            <li><a href="https://www.linkedin.com/in/saigkill/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="https://www.amazon.de/-/e/B07J3CPKR1" target="_blank" rel="noopener"><i class="fab fa-amazon"></i> @_localizer["amazon-page"]</a></li>
             <li><a href="skype:schurik0815"><i class="fab fa-skype"></i> Skype</a></li>
-            <li><a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" target="_blank"><i class="fab fa-xing-square"></i> XING</a></li>
-            <li><a href="https://www.last.fm/user/illuminatus1979" target="_blank"><i class="fab fa-lastfm-square"></i> Last.fm</a></li>
-            <li><a href="https://dev.to/saigkill" title="Dev.to Community"><i class="fab fa-dev"></i> Dev.to</a></li>
-            <li><a href="https://www.reddit.com/user/saigkill"><i class="fab fa-reddit-square"></i> Reddit</a></li>
-            <li><a href="https://discord.com/channels/@@saigkill001#3216" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
+            <li><a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" target="_blank" rel="noopener"><i class="fab fa-xing-square"></i> XING</a></li>
+            <li><a href="https://www.last.fm/user/illuminatus1979" target="_blank" rel="noopener"><i class="fab fa-lastfm-square"></i> Last.fm</a></li>
+            <li><a href="https://dev.to/saigkill" title="Dev.to Community" rel="noopener"><i class="fab fa-dev"></i> Dev.to</a></li>
+            <li><a href="https://www.reddit.com/user/saigkill" rel="noopener"><i class="fab fa-reddit-square"></i> Reddit</a></li>
+            <li><a href="https://discord.com/channels/@@saigkill001#3216" target="_blank" rel="noopener"><i class="fab fa-discord"></i> Discord</a></li>
             <li><img src="~/img/social/element-matrix.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"> Matrix: @@saigkill0:matrix.org</li>
-            <li><a rel="me" href="https://social.linux.pizza/@@saigkill" target="_blank"><i class="fab fa-mastodon"></i> Mastodon</a></li>
-            <li><a href="https://steamcommunity.com/id/saigkill/"><i class="fab fa-steam-square"></i> Steam</a></li>
+            <li><a rel="me" href="https://social.linux.pizza/@@saigkill" target="_blank" rel="noopener"><i class="fab fa-mastodon"></i> Mastodon</a></li>
+            <li><a href="https://steamcommunity.com/id/saigkill/" rel="noopener" target="_blank"><i class="fab fa-steam-square"></i> Steam</a></li>
         </ul>
         <hr />
         <h4>@_localizer["coding-activity"]</h4>
         <ul class="list-unstyled">
-            <li><img src="~/img/social/openhub.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"><a href="https://openhub.net/accounts/saigkill" target="_blank"> OpenHub</a></li>
-            <li><img src="~/img/social/codestats.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://codestats.net/users/saigkill" target="_blank"> Codestats</a></li>
-            <li><a href="https://profile.codersrank.io/user/saigkill" target="_blank"><i class="fas fa-code"></i> Codersrank</a></li>
-            <li><img src="~/img/social/codeproject.png" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://www.codeproject.com/Members/SaschaManns" target="_blank"> Codeproject</a></li>
-            <li><a href="https://rubygems.org/profiles/saigkill" target="_blank"><i class="far fa-gem"></i> Rubygems</a></li>
-            <li><a href="https://github.com/saigkill" target="_blank"><i class="fab fa-github-square"></i> GitHub</a></li>
-            <li><a href="https://stackoverflow.com/users/7404985/sascha-manns" target="_blank"><i class="fab fa-stack-overflow"></i> Stack Overflow</a></li>
+            <li><img src="~/img/social/openhub.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"><a href="https://openhub.net/accounts/saigkill" target="_blank" rel="noopener"> OpenHub</a></li>
+            <li><img src="~/img/social/codestats.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://codestats.net/users/saigkill" target="_blank" rel="noopener"> Codestats</a></li>
+            <li><a href="https://profile.codersrank.io/user/saigkill" target="_blank" rel="noopener"><i class="fas fa-code"></i> Codersrank</a></li>
+            <li><img src="~/img/social/codeproject.png" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://www.codeproject.com/Members/SaschaManns" target="_blank" rel="noopener"> Codeproject</a></li>
+            <li><a href="https://rubygems.org/profiles/saigkill" target="_blank" rel="noopener"><i class="far fa-gem"></i> Rubygems</a></li>
+            <li><a href="https://github.com/saigkill" target="_blank" rel="noopener"><i class="fab fa-github-square"></i> GitHub</a></li>
+            <li><a href="https://stackoverflow.com/users/7404985/sascha-manns" target="_blank" rel="noopener"><i class="fab fa-stack-overflow"></i> Stack Overflow</a></li>
         </ul>
         <hr />
         <h4>@_localizer["supporter"]</h4>
         <div id="besupporter">
             <ul class="list-unstyled">
-                <li><a target="_blank" href="https://www.buymeacoffee.com/PE0y8DF"><img src="~/img/badges/buymeacoffee.jpg" alt="Buy me a coffee" width="12%"></a></li>
-                <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD"><img src="~/img/badges/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
-                <li><a href="https://paypal.me/SaschaManns" target="_blank"><img src="~/img/badges/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
-                <li><a href="https://www.patreon.com/saigkill"><img src="~/img/badges/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
-                <li><a href="https://liberapay.com/saigkill/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>
+                <li><a target="_blank" href="https://www.buymeacoffee.com/PE0y8DF" rel="noopener"><img src="~/img/badges/buymeacoffee.jpg" alt="Buy me a coffee" width="12%"></a></li>
+                <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD" rel="noopener"><img src="~/img/badges/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a href="https://paypal.me/SaschaManns" target="_blank" rel="noopener"><img src="~/img/badges/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
+                <li><a href="https://www.patreon.com/saigkill" rel="noopener"><img src="~/img/badges/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a href="https://liberapay.com/saigkill/donate" target="_blank" rel="noopener"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>
             </ul>
         </div>
         <hr />
@@ -102,12 +102,12 @@ SOFTWARE.
         <p>@_localizer["supporter-company-thx"]</p>
         <div id="supporter-company">
             <ul class="list-unstyled">
-                <li><a target="_blank" href="https://www.advancedinstaller.com/"><img src="~/img/supporters/advanced_installer_vertical_20.png" width="30%" /></a></li>
-                <li><a target="_blank" class="additional-space" href="http://www.innovasys.com/"><img src="~/img/supporters/Innovasys.png" class="additional-space" width="30%" style="margin-left: -0px;" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.jetbrains.com/"><img src="~/img/supporters/jetbrains.png" class="additional-space" width="20%" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.oxygenxml.com/"><img src="~/img/supporters/oxygen-xml-editor.jpg" class="additional-space" width="30%" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.renderx.com/"><img src="~/img/supporters/renderx.png" width="20%" class="additional-space" style="margin-left: -0px;" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.syncfusion.com/"><img src="~/img/supporters/syncfusion.jpeg" class="additional-space" width="30%" /></a></li>
+                <li><a target="_blank" href="https://www.advancedinstaller.com/" rel="noopener"><img src="~/img/supporters/advanced_installer_vertical_20.png" width="30%" /></a></li>
+                <li><a target="_blank" class="additional-space" href="http://www.innovasys.com/" rel="noopener"><img src="~/img/supporters/Innovasys.png" class="additional-space" width="30%" style="margin-left: -0px;" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.jetbrains.com/" rel="noopener"><img src="~/img/supporters/jetbrains.png" class="additional-space" width="20%" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.oxygenxml.com/" rel="noopener"><img src="~/img/supporters/oxygen-xml-editor.jpg" class="additional-space" width="30%" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.renderx.com/" rel="noopener"><img src="~/img/supporters/renderx.png" width="20%" class="additional-space" style="margin-left: -0px;" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.syncfusion.com/" rel="noopener"><img src="~/img/supporters/syncfusion.jpeg" class="additional-space" width="30%" /></a></li>
             </ul>
         </div>
     </div>
