--- a/src/MannsBlog/Views/Root/Privacy.cshtml
+++ b/src/MannsBlog/Views/Root/Privacy.cshtml
@@ -57,7 +57,7 @@ SOFTWARE.
 <p>Sascha Manns<br>Kelbergerstraße 18<br>56727 Mayen</p>
 <p><strong>@_localizer["responsible-person"]:</strong> Sascha Manns</p>
 <p><strong>@_localizer["responsible-email"]:</strong> <a href="mailto:Sascha.Manns@outlook.de">Sascha.Manns@outlook.de</a></p>
-<p><strong>@_localizer["responsible-imprint"]:</strong> <a href="https://saschamanns.de/imprint" target="_blank">https://saschamanns.de/imprint</a></p>
+<p><strong>@_localizer["responsible-imprint"]:</strong> <a href="https://saschamanns.de/imprint" target="_blank" rel="noopener">https://saschamanns.de/imprint</a></p>
 <br />
 <h2 id="mOverview">@_localizer["toc-processing"]</h2>
 <p>@_localizer["processing-purposes"]</p>
