--- a/src/MannsBlog/Views/Shared/_Sidebar.cshtml
+++ b/src/MannsBlog/Views/Shared/_Sidebar.cshtml
@@ -182,13 +182,13 @@ SOFTWARE.
     <hr />
     <div class="center-wo-minimize">
         <div class="center-wo-minimize" id="gi" style="margin-top: 1em">
-            <a href="https://www.gi.de"><img id="gi" src="~/img/badges/mitglied.jpg" width="70%" /></a>
+            <a href="https://www.gi.de" rel="noopener" target="_blank"><img id="gi" src="~/img/badges/mitglied.jpg" width="70%" /></a>
         </div>
         <div class="center-wo-minimize" id="opensuse" style="margin-top: 1em">
-            <a href="https://connect.opensuse.org/pg/profile/saigkill" target="_blank"><img src="~/img/badges/memberbadge.png" width="70%" /></a>
+            <a href="https://connect.opensuse.org/pg/profile/saigkill" target="_blank" rel="noopener"><img src="~/img/badges/memberbadge.png" width="70%" /></a>
         </div>
         <div class="center-wo-minimize" id="insider" style="margin-top: 1em">
-            <a href="https://insider.windows.com" target="_blank"><img src="~/img/markers/Insider.jpg" width="70%" /></a>
+            <a href="https://insider.windows.com" target="_blank" rel="noopener"><img src="~/img/markers/Insider.jpg" width="70%" /></a>
         </div>
     </div>
 </div>
