--- a/src/MannsBlog/Views/Shared/_Syndication.cshtml
+++ b/src/MannsBlog/Views/Shared/_Syndication.cshtml
@@ -23,16 +23,16 @@ SOFTWARE.
 *@
 <h3 class="center-align">Syndication</h3>
 <ul>
-    <li><a href="http://www.netvibes.com/subscribe.php?url=https://feeds.feedburner.com/saigkills-backtrace"><img border="0" align="left" alt="add2netvibes" src="~/img/badges/add2netvibes.gif" /></a></li>
-    <li><a href="http://add.my.yahoo.com/rss?url=https://feeds.feedburner.com/saigkills-backtrace"><img border="0" align="left" alt="add2yahoo" src="~/img/badges/addyahoo.gif" /></a></li>
-    <li><a href="http://www.blogarama.com/technology-blogs/1309429-blog/" target="_blank"><img src="http://www.blogarama.com/images/button_sm_1.gif" alt="Follow me on Blogarama" /></a></li>
-    <li><a href="https://www.bloggerei.de"><img src="https://www.bloggerei.de/bgpublicon.jpg" width="80" height="15" border="0" alt="Blogverzeichnis - Bloggerei.de" /></a></li>
-    <li><a href="https://www.bloggingfusion.com/"><img src="https://www.bloggingfusion.com/images/linkware/bloggingfusion80x153.gif" alt="Blogging Fusion Blog Directory" style="border: 0;" /></a></li>
-    <li><a href="https://www.bloggeramt.de" title="Blog" target="_blank"><img src="https://www.bloggeramt.de/images/blog_button1.gif" style="border: 0;" alt="Blogverzeichnis" /></a></li>
+    <li><a href="http://www.netvibes.com/subscribe.php?url=https://saschamanns.de/feed" rel="noopener" target="_blank"><img border="0" align="left" alt="add2netvibes" src="~/img/badges/add2netvibes.gif" /></a></li>
+    <li><a href="http://add.my.yahoo.com/rss?url=https://saschamanns.de/feed" rel="noopener" target="_blank"><img border="0" align="left" alt="add2yahoo" src="~/img/badges/addyahoo.gif" /></a></li>
+    <li><a href="http://www.blogarama.com/technology-blogs/1309429-blog/" target="_blank" rel="noopener"><img src="http://www.blogarama.com/images/button_sm_1.gif" alt="Follow me on Blogarama" /></a></li>
+    <li><a href="https://www.bloggerei.de" target="_blank" rel="noopener"><img src="https://www.bloggerei.de/bgpublicon.jpg" width="80" height="15" border="0" alt="Blogverzeichnis - Bloggerei.de" /></a></li>
+    <li><a href="https://www.bloggingfusion.com/" target="_blank" rel="noopener"><img src="https://www.bloggingfusion.com/images/linkware/bloggingfusion80x153.gif" alt="Blogging Fusion Blog Directory" style="border: 0;" /></a></li>
+    <li><a href="https://www.bloggeramt.de" title="Blog" target="_blank" rel="noopener"><img src="https://www.bloggeramt.de/images/blog_button1.gif" style="border: 0;" alt="Blogverzeichnis" /></a></li>
     <li>
         <!-- TopBlogs.de das Original - Blogverzeichnis | Blog Top Liste -->
-        <a href="https://www.topblogs.de/"><img border="0" src="https://www.topblogs.de/tracker.php?do=in&id=11089" alt="TopBlogs.de das Original - Blogverzeichnis | Blog Top Liste" /></a>
+        <a href="https://www.topblogs.de/" target="_blank" rel="noopener"><img border="0" src="https://www.topblogs.de/tracker.php?do=in&id=11089" alt="TopBlogs.de das Original - Blogverzeichnis | Blog Top Liste" /></a>
         <!-- /TopBlogs.de das Original - Blogverzeichnis | Blog Top Liste -->
     </li>
-    <li><a href="https://www.ontoplist.com/blogs/saigkills-backtrace_5b0f0088673d1/" target="_blank"><img src="https://www.ontoplist.com/images/ontoplist31.png?id=5b0f0088673d1" alt="Sascha Mannss Twilight Zone - OnToplist.com" border="0"></a></li>
+    <li><a href="https://www.ontoplist.com/blogs/saigkills-backtrace_5b0f0088673d1/" target="_blank" rel="noopener"><img src="https://www.ontoplist.com/images/ontoplist31.png?id=5b0f0088673d1" alt="Sascha Mannss Twilight Zone - OnToplist.com" border="0"></a></li>
 </ul>
