Fixed bugs found by Sonarcloud

--- a/src/MannsBlog/Views/Root/About.cshtml
+++ b/src/MannsBlog/Views/Root/About.cshtml
@@ -72,7 +72,7 @@ SOFTWARE.
             <li><a href="https://www.reddit.com/user/saigkill" rel="noopener"><i class="fab fa-reddit-square"></i> Reddit</a></li>
             <li><a href="https://discord.com/channels/@@saigkill001#3216" target="_blank" rel="noopener"><i class="fab fa-discord"></i> Discord</a></li>
             <li><img src="~/img/social/element-matrix.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"> Matrix: @@saigkill0:matrix.org</li>
-            <li><a rel="me" href="https://social.linux.pizza/@@saigkill" target="_blank" rel="noopener"><i class="fab fa-mastodon"></i> Mastodon</a></li>
+            <li><a href="https://social.linux.pizza/@@saigkill" target="_blank" rel="noopener"><i class="fab fa-mastodon"></i> Mastodon</a></li>
             <li><a href="https://steamcommunity.com/id/saigkill/" rel="noopener" target="_blank"><i class="fab fa-steam-square"></i> Steam</a></li>
         </ul>
         <hr />
@@ -81,7 +81,7 @@ SOFTWARE.
             <li><img src="~/img/social/openhub.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"><a href="https://openhub.net/accounts/saigkill" target="_blank" rel="noopener"> OpenHub</a></li>
             <li><img src="~/img/social/codestats.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://codestats.net/users/saigkill" target="_blank" rel="noopener"> Codestats</a></li>
             <li><a href="https://profile.codersrank.io/user/saigkill" target="_blank" rel="noopener"><i class="fas fa-code"></i> Codersrank</a></li>
-            <li><img src="~/img/social/codeproject.png" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://www.codeproject.com/Members/SaschaManns" target="_blank" rel="noopener"> Codeproject</a></li>
+            <li><img src="~/img/social/codeproject.png" alt="Codeproject Logo" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://www.codeproject.com/Members/SaschaManns" target="_blank" rel="noopener"> Codeproject</a></li>
             <li><a href="https://rubygems.org/profiles/saigkill" target="_blank" rel="noopener"><i class="far fa-gem"></i> Rubygems</a></li>
             <li><a href="https://github.com/saigkill" target="_blank" rel="noopener"><i class="fab fa-github-square"></i> GitHub</a></li>
             <li><a href="https://stackoverflow.com/users/7404985/sascha-manns" target="_blank" rel="noopener"><i class="fab fa-stack-overflow"></i> Stack Overflow</a></li>
@@ -91,9 +91,9 @@ SOFTWARE.
         <div id="besupporter">
             <ul class="list-unstyled">
                 <li><a target="_blank" href="https://www.buymeacoffee.com/PE0y8DF" rel="noopener"><img src="~/img/badges/buymeacoffee.jpg" alt="Buy me a coffee" width="12%"></a></li>
-                <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD" rel="noopener"><img src="~/img/badges/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
-                <li><a href="https://paypal.me/SaschaManns" target="_blank" rel="noopener"><img src="~/img/badges/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
-                <li><a href="https://www.patreon.com/saigkill" rel="noopener"><img src="~/img/badges/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD" rel="noopener"><img src="~/img/badges/amazon.svg" alt="Amazon Logo" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a href="https://paypal.me/SaschaManns" target="_blank" rel="noopener"><img src="~/img/badges/paypal_donate.svg" alt="Paypal Logo" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
+                <li><a href="https://www.patreon.com/saigkill" rel="noopener"><img src="~/img/badges/patreon.svg" alt="Patreon Logo" width="12%" style="margin-top: 10px" /></a></li>
                 <li><a href="https://liberapay.com/saigkill/donate" target="_blank" rel="noopener"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>
             </ul>
         </div>
@@ -102,12 +102,12 @@ SOFTWARE.
         <p>@_localizer["supporter-company-thx"]</p>
         <div id="supporter-company">
             <ul class="list-unstyled">
-                <li><a target="_blank" href="https://www.advancedinstaller.com/" rel="noopener"><img src="~/img/supporters/advanced_installer_vertical_20.png" width="30%" /></a></li>
-                <li><a target="_blank" class="additional-space" href="http://www.innovasys.com/" rel="noopener"><img src="~/img/supporters/Innovasys.png" class="additional-space" width="30%" style="margin-left: -0px;" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.jetbrains.com/" rel="noopener"><img src="~/img/supporters/jetbrains.png" class="additional-space" width="20%" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.oxygenxml.com/" rel="noopener"><img src="~/img/supporters/oxygen-xml-editor.jpg" class="additional-space" width="30%" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.renderx.com/" rel="noopener"><img src="~/img/supporters/renderx.png" width="20%" class="additional-space" style="margin-left: -0px;" /></a></li>
-                <li><a target="_blank" class="additional-space" href="https://www.syncfusion.com/" rel="noopener"><img src="~/img/supporters/syncfusion.jpeg" class="additional-space" width="30%" /></a></li>
+                <li><a target="_blank" href="https://www.advancedinstaller.com/" rel="noopener"><img src="~/img/supporters/advanced_installer_vertical_20.png" alt="Advanced Installer Logo" width="30%" /></a></li>
+                <li><a target="_blank" class="additional-space" href="http://www.innovasys.com/" rel="noopener"><img src="~/img/supporters/Innovasys.png" alt="Innovasys Logo" class="additional-space" width="30%" style="margin-left: -0px;" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.jetbrains.com/" rel="noopener"><img src="~/img/supporters/jetbrains.png" alt="Jetbrains Logo" class="additional-space" width="20%" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.oxygenxml.com/" rel="noopener"><img src="~/img/supporters/oxygen-xml-editor.jpg" alt="Oxygen XML Editor Logo" class="additional-space" width="30%" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.renderx.com/" rel="noopener"><img src="~/img/supporters/renderx.png" alt="RenderX Logo" width="20%" class="additional-space" style="margin-left: -0px;" /></a></li>
+                <li><a target="_blank" class="additional-space" href="https://www.syncfusion.com/" rel="noopener"><img src="~/img/supporters/syncfusion.jpeg" alt="Syncfusion Logo" class="additional-space" width="30%" /></a></li>
             </ul>
         </div>
     </div>
