--- a/src/MannsBlog/Views/Root/CurriculumVitae.cshtml
+++ b/src/MannsBlog/Views/Root/CurriculumVitae.cshtml
@@ -145,7 +145,7 @@ SOFTWARE.
                         <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
-                <p>@_localizer["about-other-skills"] JSON, XML, Wordpress, SCRUM, Git, Linux, Windows, Apache httpd/Tomcat, Azure, Azure DevOps, OOP, Swagger, Visual Basic, Visual Studio</p>
+                <p>@_localizer["about-other-skills"] JSON, XML, Wordpress, SCRUM, Git, Linux, Windows, Apache httpd/Tomcat, Azure, Azure DevOps, OOP, Swagger, Visual Basic, Visual Studio, Syncfusion Controls, DevExpress Controls.</p>
             </div>
         </div>
     </div>
