--- a/src/MannsBlog/Views/Root/Story.cshtml
+++ b/src/MannsBlog/Views/Root/Story.cshtml
@@ -129,6 +129,7 @@ SOFTWARE.
     <hr />
 
     <table class="tg">
+        <caption>Share Buttons</caption>
         <tbody>
             <tr>
                 <td class="tg-0lax"><div data-type="xing/share" data-counter="right" @_localizer["xing-lang"]></div></td>
