--- a/src/MannsBlog/Views/Shared/_Info.cshtml
+++ b/src/MannsBlog/Views/Shared/_Info.cshtml
@@ -10,6 +10,7 @@
                 <button class="btn" id="info-table-btn">Show Info</button>
                 <div class="hidden" id="info-panel">
                     <table class="text-xs border w-full">
+                        <caption>Information about the Environment</caption>
                         <tr>
                             <td>Application Name</td>
                             <td><strong>@env.ApplicationName</strong></td>
