--- a/src/MannsBlog/Views/Shared/_Sidebar.cshtml
+++ b/src/MannsBlog/Views/Shared/_Sidebar.cshtml
@@ -182,13 +182,13 @@ SOFTWARE.
     <hr />
     <div class="center-wo-minimize">
         <div class="center-wo-minimize" id="gi" style="margin-top: 1em">
-            <a href="https://www.gi.de" rel="noopener" target="_blank"><img id="gi" src="~/img/badges/mitglied.jpg" width="70%" /></a>
+            <a href="https://www.gi.de" rel="noopener" target="_blank"><img id="gi" src="~/img/badges/mitglied.jpg" width="70%" alt="Gesellschaft für Informatik Logo" /></a>
         </div>
         <div class="center-wo-minimize" id="opensuse" style="margin-top: 1em">
-            <a href="https://connect.opensuse.org/pg/profile/saigkill" target="_blank" rel="noopener"><img src="~/img/badges/memberbadge.png" width="70%" /></a>
+            <a href="https://connect.opensuse.org/pg/profile/saigkill" target="_blank" rel="noopener"><img src="~/img/badges/memberbadge.png" width="70%" alt="openSUSE Logo" /></a>
         </div>
         <div class="center-wo-minimize" id="insider" style="margin-top: 1em">
-            <a href="https://insider.windows.com" target="_blank" rel="noopener"><img src="~/img/markers/Insider.jpg" width="70%" /></a>
+            <a href="https://insider.windows.com" target="_blank" rel="noopener"><img src="~/img/markers/Insider.jpg" width="70%" alt="WIndows Insider Logo" /></a>
         </div>
     </div>
 </div>
@@ -234,6 +234,6 @@ SOFTWARE.
 <div id="codeproject">
     <h3 style="text-align: center;">Codeproject</h3>
     <div class="center-align">
-        <p><iframe frameborder="true" height="180" scrolling="no" src="https://www.codeproject.com/members/flair/11834143" width="220"></iframe></p>
+        <p><iframe frameborder="true" height="180" scrolling="no" src="https://www.codeproject.com/members/flair/11834143" width="220" title="Codeproject Badge"></iframe></p>
     </div>
 </div>
