--- a/src/MannsBlog/Views/Root/Contact.cshtml
+++ b/src/MannsBlog/Views/Root/Contact.cshtml
@@ -68,6 +68,7 @@ SOFTWARE.
 
 <form method="post" enctype="multipart/form-data">
     <table border="0" cellpadding="0" cellspacing="0">
+        <caption>Contact form</caption>
         <tr>
             <td style="width: 80px">Name:</td>
             <td><input type="text" name="Name" /></td>
@@ -94,5 +95,8 @@ SOFTWARE.
         </tr>
     </table>
     <br />
-    <span style="color:green">@Model.Message</span>
+    @if (Model.Message != null)
+    {
+        <span style="color:green">@Model.Message</span>
+    }
 </form>
