--- a/src/MannsBlog/Views/Videos/_VideoFrame.cshtml
+++ b/src/MannsBlog/Views/Videos/_VideoFrame.cshtml
@@ -22,17 +22,17 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 *@
 @model MannsBlog.Services.DataProviders.Video
-  <div class="embed-responsive">
+<div class="embed-responsive">
     @if (Model.VideoType == MannsBlog.Services.DataProviders.VideoType.YouTube)
     {
-      <iframe data-src="https://www.youtube.com/embed/@(Model.VideoCode)?rel=0" frameborder="0" allowfullscreen></iframe>
+        <iframe data-src="https://www.youtube.com/embed/@(Model.VideoCode)?rel=0" title="Youtube" frameborder="0" allowfullscreen></iframe>
     }
     else if (Model.VideoType == MannsBlog.Services.DataProviders.VideoType.Vimeo)
     {
-      <iframe data-src="https://player.vimeo.com/video/@(Model.VideoCode)" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe data-src="https://player.vimeo.com/video/@(Model.VideoCode)" title="Vimeo" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     }
     else if (Model.VideoType == MannsBlog.Services.DataProviders.VideoType.Channel9)
     {
-      <iframe data-src="https://channel9.msdn.com/@(Model.VideoCode)/player" allowFullScreen frameBorder="0"></iframe>
+        <iframe data-src="https://channel9.msdn.com/@(Model.VideoCode)/player" title="Channel9" allowFullScreen frameBorder="0"></iframe>
     }
-  </div>
+</div>
